Change download system where tracks can have no youtube video id so they are not downloaded yet
